# atlas

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  SANYI.md  pyproject.toml
.agents/skills/: README.md
.agents/skills/adk-dev-guide/: SKILL.md
.agents/skills/adk-scaffold/: SKILL.md
.agents/skills/framework-selection/: SKILL.md
.agents/skills/langgraph-scaffold/: SKILL.md
.claude/: settings.json
.claude/agents/: agent_creator.md
.claude/docs/: ttd.md
.claude/docs/companion/: collaboration.md
.claude/hooks/: code_quality.sh  docs_scope_guard.sh  file_size.sh  import_cycle.sh  public_api_test_check.sh  sdk_lint.sh  syntax_format.sh  test_coverage.sh  test_guard.sh  ts_lint.sh
.claude/skills/: README.md
.claude/skills/akira/: SKILL.md
.claude/skills/code-review/: SKILL.md
.claude/skills/debug/: SKILL.md
.claude/skills/dream/: SKILL.md
.claude/skills/eval-report/: SKILL.md
.claude/skills/execute/: SKILL.md
.claude/skills/grow-companion/: SKILL.md
.claude/skills/mcp-builder/: SKILL.md
.claude/skills/ml-experiment/: SKILL.md
.claude/skills/new-agent/: SKILL.md
.claude/skills/pipeline/: SKILL.md
.claude/skills/plan/: SKILL.md
.claude/skills/refactor/: SKILL.md
.claude/skills/research/: SKILL.md
.claude/skills/review/: SKILL.md
.claude/skills/sanyi/: README.md  SKILL.md
.claude/skills/segment-analysis/: SKILL.md
.claude/skills/sprint-balance/: SKILL.md
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml
api/: main.py
core/knowledge/: graph.py  seeds.py
core/preprocessing/: customer.py  embeddings.py  features.py  ingestion.py  preprocessing.py  synthetic.py
core/preprocessing/crypto/: fetcher.py  indicators.py
core/segmentation/: algorithms.py  evaluation.py  naming.py
evals/: arima.py  comparison.py  comparison_learner.py
evals/graders/: crypto_graders.py  graders.py
evals/metrics/: constants.py  crypto_constants.py
evals/reports/: drift_log.jsonl  figures.py  report.py  stats.py
evals/reports/html/: ab_comparison.py  build_report.py  calibration_report.py  cohort_compare_report.py  eval_set_group.py  narratives.py  pm_narratives.py  results_section.py  stats_charts.py  stats_profile.py  suite_breakdown.py  suite_corpus_compare.py  suite_snapshot.py  va_stats_retrieval.py
evals/reports/utils/: __init__.py  __main__.py  _html.py  _pdf.py  _rebuild.py  _sections.py  compare.py  embed.py  figures.py  layout.py  theme.py
pipelines/: crypto.py  crypto_monitor.py  forecast.py  segment.py
src/: cv_runner.py  graph.py  state.py
src/agents/: graph.py  nodes.py  state.py
src/agents/crypto/: graph.py  nodes.py  paper_trading.py  state.py
src/agents/forecast/: main.py
src/agents/learner/: __init__.py  bandit.py  base.py  rl_interface.py  rule_based.py
tests/core/: test_arima.py  test_features.py  test_preprocessing.py  test_synthetic.py
tests/evals/: test_crypto_graders.py  test_graders.py
tests/src/: test_agent_smoke.py
web/: CLAUDE.md  eslint.config.mjs  package-lock.json  package.json  tailwind.config.ts
(+44 files in other folders)
