[project]
name = "atlas"
version = "0.1.0"
description = "Cash flow forecasting and customer segmentation agent"
requires-python = ">=3.12"
dependencies = [
    # Core data
    "polars>=1.42.1",
    "numpy>=2.5.1",
    "pandas>=2.0.0",          # statsforecast requires pandas

    # ML / forecasting
    "scikit-learn>=1.9.0",
    "statsforecast>=1.7.0",
    "statsmodels>=0.14.0",
    "scipy>=1.18.0",

    # Clustering
    "hdbscan>=0.8.44",

    # LangGraph / Anthropic
    "langgraph>=1.2.9",
    "anthropic>=0.117.0",

    # Knowledge graph
    "neo4j>=5.0.0",

    # API
    "fastapi>=0.139.2",
    "uvicorn[standard]>=0.51.0",

    # Reporting
    "rich>=13.0.0",

    # HTTP
    "httpx>=0.27.0",

    # Crypto
    "ccxt>=4.0.0",
]

[project.optional-dependencies]
chronos = [
    "torch>=2.0.0",
    "chronos-forecasting>=2.3.1",
]
tsfresh = [
    "tsfresh>=0.20.0",
]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.15.22",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.15.22",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["E501", "RUF001", "RUF002", "RUF003", "N803", "N806"]

[tool.hatch.build.targets.wheel]
packages = ["core", "src", "evals", "api", "pipelines"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
